# bzlmodRio-opencv

./: MODULE.bazel  WORKSPACE  maven_cpp_deps.bzl  maven_install.json  maven_java_deps.bzl
.github/workflows/: build.yml
libraries/cpp/opencv/: BUILD.bazel  libraries.bzl
libraries/java/opencv/: BUILD.bazel
private/cpp/opencv/: BUILD.bazel  shared.BUILD.bazel  wrapped_cc_import.bzl
private/non_bzlmod_dependencies/: download_dependencies.bzl  setup_dependencies.bzl
tests/: .bazelrc-cc  MODULE.bazel  WORKSPACE  maven_install.json  python_windows.patch
tests/cpp/opencv/: BUILD.bazel  test.cpp
tests/java/opencv/: BUILD.bazel
