module(
    name = "bzlmodrio-opencv",
    version = "2025.4.10.0-3.bcr4",
    compatibility_level = 2025,
)

bazel_dep(name = "platforms", version = "0.0.9")
bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2025-1.bcr5")
bazel_dep(name = "rules_bzlmodrio_jdk", version = "17.0.12-7.bcr1")

setup_bzlmodrio_opencv_cpp_dependencies = use_extension("//:maven_cpp_deps.bzl", "setup_bzlmodrio_opencv_cpp_dependencies")
use_repo(
    setup_bzlmodrio_opencv_cpp_dependencies,
    "edu_wpi_opencv-cpp_headers",
    "edu_wpi_opencv-cpp_linuxarm32",
    "edu_wpi_opencv-cpp_linuxarm32debug",
    "edu_wpi_opencv-cpp_linuxarm32static",
    "edu_wpi_opencv-cpp_linuxarm32staticdebug",
    "edu_wpi_opencv-cpp_linuxarm64",
    "edu_wpi_opencv-cpp_linuxarm64debug",
    "edu_wpi_opencv-cpp_linuxarm64static",
    "edu_wpi_opencv-cpp_linuxarm64staticdebug",
    "edu_wpi_opencv-cpp_linuxathena",
    "edu_wpi_opencv-cpp_linuxathenadebug",
    "edu_wpi_opencv-cpp_linuxathenastatic",
    "edu_wpi_opencv-cpp_linuxathenastaticdebug",
    "edu_wpi_opencv-cpp_linuxsystemcore",
    "edu_wpi_opencv-cpp_linuxsystemcoredebug",
    "edu_wpi_opencv-cpp_linuxsystemcorestatic",
    "edu_wpi_opencv-cpp_linuxsystemcorestaticdebug",
    "edu_wpi_opencv-cpp_linuxx86-64",
    "edu_wpi_opencv-cpp_linuxx86-64debug",
    "edu_wpi_opencv-cpp_linuxx86-64static",
    "edu_wpi_opencv-cpp_linuxx86-64staticdebug",
    "edu_wpi_opencv-cpp_osxarm64",
    "edu_wpi_opencv-cpp_osxarm64debug",
    "edu_wpi_opencv-cpp_osxarm64static",
    "edu_wpi_opencv-cpp_osxarm64staticdebug",
    "edu_wpi_opencv-cpp_osxuniversal",
    "edu_wpi_opencv-cpp_osxuniversaldebug",
    "edu_wpi_opencv-cpp_osxuniversalstatic",
    "edu_wpi_opencv-cpp_osxuniversalstaticdebug",
    "edu_wpi_opencv-cpp_osxx86-64",
    "edu_wpi_opencv-cpp_osxx86-64debug",
    "edu_wpi_opencv-cpp_osxx86-64static",
    "edu_wpi_opencv-cpp_osxx86-64staticdebug",
    "edu_wpi_opencv-cpp_sources",
    "edu_wpi_opencv-cpp_windowsarm64",
    "edu_wpi_opencv-cpp_windowsarm64debug",
    "edu_wpi_opencv-cpp_windowsarm64static",
    "edu_wpi_opencv-cpp_windowsarm64staticdebug",
    "edu_wpi_opencv-cpp_windowsx86",
    "edu_wpi_opencv-cpp_windowsx86-64",
    "edu_wpi_opencv-cpp_windowsx86-64debug",
    "edu_wpi_opencv-cpp_windowsx86-64static",
    "edu_wpi_opencv-cpp_windowsx86-64staticdebug",
    "edu_wpi_opencv-cpp_windowsx86debug",
    "edu_wpi_opencv-cpp_windowsx86static",
    "edu_wpi_opencv-cpp_windowsx86staticdebug",
)

bazel_dep(name = "rules_jvm_external", version = "6.8")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "edu.wpi.first.thirdparty.frc2025.opencv:opencv-java:4.10.0-3",
    ],
    fetch_sources = True,
    known_contributing_modules = [
        "bzlmodrio-opencv",
        "protobuf",
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://frcmaven.wpi.edu/artifactory/release/",
    ],
)
use_repo(maven, "maven")
