bazel_dep(name = "bzlmodrio-opencv", version = "")
local_path_override(
    module_name = "bzlmodrio-opencv",
    path = "..",
)

bazel_dep(name = "googletest", version = "1.14.0.bcr.1")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_jvm_external", version = "6.3")
bazel_dep(name = "rules_bazelrio", version = "0.0.14")
bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2025-1.bcr4")
bazel_dep(name = "rules_bzlmodrio_jdk", version = "17.0.12-7.bcr1")

# TODO replace with released version once they make one that has Austins patch
archive_override(
    module_name = "rules_python",
    integrity = "sha256-cx46XtT7EnCQmo3Ad5AqWOp8dB6kTGrXVmKCCwjadxw=",
    strip_prefix = "rules_python-29a7f6a0d5c8996f4d3f36e08269e0faf478927b",
    urls = ["https://github.com/bazel-contrib/rules_python/archive/29a7f6a0d5c8996f4d3f36e08269e0faf478927b.tar.gz"],
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.junit.jupiter:junit-jupiter-api:5.10.1",
        "org.junit.jupiter:junit-jupiter-params:5.10.1",
        "org.junit.jupiter:junit-jupiter-engine:5.10.1",
        "org.junit.platform:junit-platform-commons:1.6.1",
        "org.junit.platform:junit-platform-console:1.6.1",
        "org.junit.platform:junit-platform-engine:1.6.1",
        "org.junit.platform:junit-platform-launcher:1.6.1",
        "org.junit.platform:junit-platform-suite-api:1.6.1",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(
    maven,
    "maven",
)
