alias(
    name = "header_files",
    actual = "@bzlmodrio-opencv//private/cpp/opencv:header_files",
    visibility = ["//visibility:public"],
)

alias(
    name = "opencv",
    actual = "@bzlmodrio-opencv//private/cpp/opencv",
    visibility = ["//visibility:public"],
)

alias(
    name = "jni",
    actual = "@bzlmodrio-opencv//private/cpp/opencv:jni",
    visibility = ["//visibility:public"],
)
