load("@rules_java//java:defs.bzl", "java_import")
load("@bzlmodrio-opencv//private/cpp/opencv:wrapped_cc_import.bzl", "opencv_libraries")

java_import(
    name = "opencv",
    jars = ["@edu_wpi_first_thirdparty_frc2025_opencv_opencv_java//jar:file"],
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-opencv//libraries/cpp/opencv:jni",
    ],
)
