load("@rules_cc//cc:defs.bzl", "cc_library")
load("//private/cpp/opencv:wrapped_cc_import.bzl", "opencv_libraries")

alias(
    name = "header_files",
    actual = "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_headers//:header_files",
    visibility = ["@bzlmodrio-opencv//:__subpackages__"],
)

[
    [alias(
        name = lib + extension,
        actual = select({
            "@rules_bzlmodrio_toolchains//conditions:linux_x86_64": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxx86-64//:" + lib + extension,
            "@rules_bzlmodrio_toolchains//conditions:linux_x86_64_debug": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxx86-64debug//:" + lib + extension,
            "@rules_bzlmodrio_toolchains//conditions:osx": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_osxuniversal//:" + lib + extension,
            "@rules_bzlmodrio_toolchains//conditions:osx_debug": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_osxuniversaldebug//:" + lib + extension,
            "@rules_bzlmodrio_toolchains//conditions:windows_arm64": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_windowsarm64//:" + lib + extension,
            "@rules_bzlmodrio_toolchains//conditions:windows_arm64_debug": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_windowsarm64debug//:" + lib + extension,
            "@rules_bzlmodrio_toolchains//conditions:windows_x86_64": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_windowsx86-64//:" + lib + extension,
            "@rules_bzlmodrio_toolchains//conditions:windows_x86_64_debug": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_windowsx86-64debug//:" + lib + extension,
            "@rules_bzlmodrio_toolchains//constraints/is_bookworm64:bookworm64": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxarm64//:" + lib + extension,
            "@rules_bzlmodrio_toolchains//constraints/is_bookworm64:bookworm64_debug": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxarm64debug//:" + lib + extension,
            "@rules_bzlmodrio_toolchains//constraints/is_raspibookworm32:raspibookworm32": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxarm32//:" + lib + extension,
            "@rules_bzlmodrio_toolchains//constraints/is_raspibookworm32:raspibookworm32_debug": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxarm32debug//:" + lib + extension,
            "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxathena//:" + lib + extension,
            "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio_debug": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxathenadebug//:" + lib + extension,
            "@rules_bzlmodrio_toolchains//constraints/is_systemcore:systemcore": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxsystemcore//:" + lib + extension,
            "@rules_bzlmodrio_toolchains//constraints/is_systemcore:systemcore_debug": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxsystemcoredebug//:" + lib + extension,
        }),
        visibility = ["//visibility:public"],
    ) for lib in opencv_libraries]
    for extension in [
        "_shared",
        "_shared_import",
    ]
]

alias(
    name = "opencv",
    actual = select({
        "@rules_bzlmodrio_toolchains//conditions:linux_x86_64": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxx86-64//:static",
        "@rules_bzlmodrio_toolchains//conditions:linux_x86_64_debug": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxx86-64debug//:static",
        "@rules_bzlmodrio_toolchains//conditions:osx": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_osxuniversal//:static",
        "@rules_bzlmodrio_toolchains//conditions:osx_debug": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_osxuniversaldebug//:static",
        "@rules_bzlmodrio_toolchains//conditions:windows_arm64": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_windowsarm64//:static",
        "@rules_bzlmodrio_toolchains//conditions:windows_arm64_debug": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_windowsarm64debug//:static",
        "@rules_bzlmodrio_toolchains//conditions:windows_x86_64": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_windowsx86-64//:static",
        "@rules_bzlmodrio_toolchains//conditions:windows_x86_64_debug": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_windowsx86-64debug//:static",
        "@rules_bzlmodrio_toolchains//constraints/is_bookworm64:bookworm64": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxarm64//:static",
        "@rules_bzlmodrio_toolchains//constraints/is_bookworm64:bookworm64_debug": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxarm64debug//:static",
        "@rules_bzlmodrio_toolchains//constraints/is_raspibookworm32:raspibookworm32": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxarm32//:static",
        "@rules_bzlmodrio_toolchains//constraints/is_raspibookworm32:raspibookworm32_debug": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxarm32debug//:static",
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxathena//:static",
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio_debug": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxathenadebug//:static",
        "@rules_bzlmodrio_toolchains//constraints/is_systemcore:systemcore": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxsystemcore//:static",
        "@rules_bzlmodrio_toolchains//constraints/is_systemcore:systemcore_debug": "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxsystemcoredebug//:static",
    }),
    visibility = ["@bzlmodrio-opencv//:__subpackages__"],
)

cc_library(
    name = "jni",
    srcs = select({
        "@rules_bzlmodrio_toolchains//conditions:linux_x86_64": ["@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxx86-64//:jni"],
        "@rules_bzlmodrio_toolchains//conditions:linux_x86_64_debug": ["@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxx86-64debug//:jni"],
        "@rules_bzlmodrio_toolchains//conditions:osx": ["@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_osxuniversal//:jni"],
        "@rules_bzlmodrio_toolchains//conditions:osx_debug": ["@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_osxuniversaldebug//:jni"],
        "@rules_bzlmodrio_toolchains//conditions:windows_arm64": ["@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_windowsarm64//:jni"],
        "@rules_bzlmodrio_toolchains//conditions:windows_arm64_debug": ["@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_windowsarm64debug//:jni"],
        "@rules_bzlmodrio_toolchains//conditions:windows_x86_64": ["@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_windowsx86-64//:jni"],
        "@rules_bzlmodrio_toolchains//conditions:windows_x86_64_debug": ["@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_windowsx86-64debug//:jni"],
        "@rules_bzlmodrio_toolchains//constraints/is_bookworm64:bookworm64": ["@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxarm64//:jni"],
        "@rules_bzlmodrio_toolchains//constraints/is_bookworm64:bookworm64_debug": ["@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxarm64debug//:jni"],
        "@rules_bzlmodrio_toolchains//constraints/is_raspibookworm32:raspibookworm32": ["@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxarm32//:jni"],
        "@rules_bzlmodrio_toolchains//constraints/is_raspibookworm32:raspibookworm32_debug": ["@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxarm32debug//:jni"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxathena//:jni"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio_debug": ["@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxathenadebug//:jni"],
        "@rules_bzlmodrio_toolchains//constraints/is_systemcore:systemcore": ["@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxsystemcore//:jni"],
        "@rules_bzlmodrio_toolchains//constraints/is_systemcore:systemcore_debug": ["@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_linuxsystemcoredebug//:jni"],
    }),
    linkstatic = 1,
    visibility = ["@bzlmodrio-opencv//:__subpackages__"],
    deps = [lib + "_shared_import" for lib in opencv_libraries] + [
        "@bazelrio_edu_wpi_first_thirdparty_frc_opencv_opencv-cpp_headers//:headers",
    ],
)
